--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon",
-    "build": "tsc",
+    "build": "sh -c 'tsc'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
