--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.3",
     "serverless-http": "^3.2.0"
